--- a/Patientform.css
+++ b/Patientform.css
@@ -21,9 +21,9 @@ header {
 }
 
 header h1{
-font-size: 25px;
-margin-bottom: 0px;
-font-weight: bolder;
+    font-size: 25px;
+    margin-bottom: 0px;
+    font-weight: bolder;
 }
 
 .left{
@@ -34,7 +34,6 @@ font-weight: bolder;
     float: right;
     width: 200px;
     text-align: left;
-    
 }
 
 section {
@@ -49,7 +48,6 @@ article{
     flex:  30%;
     box-sizing: border-box;
     box-shadow: 0px 0px 7px 0px black;
-
 }
 
 article:nth-of-type(3) {
@@ -93,11 +91,19 @@ input[type="submit"]:hover {
     cursor:pointer;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
+    
+    header{
+        height: 130px;
+        margin-bottom: 10px;
+    } 
+
     section {
         flex-direction: column;
+        margin-bottom: 5px;
     }
+    
     .baseline {
-        height: 125px;
+        height: 160px;
     }
 }
